# WeiLin-ComfyUI-prompt-all-in-one

./: .gitignore  LICENSE  README.md  README_EN.md  __init__.py  i18n.json  llm_setting.json  pyproject.toml
WeiLin-ComfyUI-prompt-all-in-one/: __init__.py
WeiLin-ComfyUI-prompt-all-in-one/js/: weiLinComfyUIPromptAllInOneGreat.js  weiLinComfyUIPromptAllInOneNeg.js
autocomplete/: .gitignore  autocomplete.txt
cpp/: llama_cpp_python-0.2.63-cp312-cp312-win_amd64.whl  如果安装失败请看这.txt
group_tags/: zh_CN.yaml
js/: modelInfo.js  weiLinComfyUIPromptAllInOneGreat.js  weiLinComfyUIPromptAllInOneNeg.js  weiLinComfyUIPromptNode.js  weilinComfyUIAutocompleter.js  weilinComfyUIPromptAllInOneGlobal.js  weilinComfyUIPromptGlobal.js
js/common/: autocomplete.css  autocomplete.js  modelInfoDialog.js  utils.js
local_complete_tags/: .gitignore  danbooru-0-zh.csv
prompt_js/: main.entry.js  main.entry.js.map
prompt_static/: index.html
prompt_static/css/: autocomplete.css  main.min.css  modelInfoDialog.css
prompt_static/styles/: color_style.css  dialog_model_info.css  main.min.css
prompt_storage/: groupTagsActive-img2img_prompt.json  groupTagsActive-txt2img_neg_prompt.json  groupTagsActive-txt2img_prompt.json  groupTagsColor.json  languageCode.json  tagCompleteFile.json
script/: autocomplete.py  llm_server.py  lorainfo.py
script/llm/: Translator.py  llm.py  llmTranslate.py
sd_webui_prompt_all_in_one_app/: app.py  install.py  launch.py  requirements.txt
sd_webui_prompt_all_in_one_app/modules/: extra_networks.py  prompt_parser.py  (+1 more)
templete/: zh_CN.yaml
(+39 files in other folders)
